--- a/Music Player/Music Player.csproj
+++ b/Music Player/Music Player.csproj
@@ -44,19 +44,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="interfaceForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="interfaceForm.Designer.cs">
+      <DependentUpon>interfaceForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MusicFile.cs" />
     <Compile Include="MusicPlayer.cs" />
     <Compile Include="ListBoxItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="interfaceForm.resx">
+      <DependentUpon>interfaceForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
