--- a/Music Player/Music Player.csproj
+++ b/Music Player/Music Player.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper.cs" />
     <Compile Include="interfaceForm.cs">
       <SubType>Form</SubType>
     </Compile>
